--- a/css/styles.css
+++ b/css/styles.css
@@ -84,17 +84,38 @@ img {
   color: var(--text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 40px;
-  
 }
 .header {
   border-bottom: 1px solid #ececec;
 }
-
-.header .container {
+.header .logo {
+  margin-right: 81px;
+  text-decoration: none;
+}
+.link {
+  padding: 8px;
+  margin: 4px;
   display: flex;
   align-items: center;
 }
+.header-container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  height: 80px;
+  align-items: center;
+  justify-content: space-between;
+}
 
+.header-container-left {
+  display: flex;
+  align-items: center;
+}
+.header-contact {
+  display: flex;
+  align-items: center;
+}
 .header-nav {
   display: flex;
   align-items: center;
@@ -118,7 +139,6 @@ img {
 .header-contact-list {
   display: flex;
   margin-left: auto;
-  
 }
 
 .header-nav-item:not(:last-child) {
@@ -185,15 +205,8 @@ ul {
   background-color: var(--studio-bottom-color);
 }
 
-/* .orders {
-  height: 600px;
-  margin-left: auto;
-  margin-right: auto;
-} */
-/* .orders, */
 .footer-menu-nav {
-  background-color: var(--menu-nav-menu-footer-bckgr)
-
+  background-color: var(--menu-nav-menu-footer-bckgr);
 }
 
 .order-title {
@@ -215,25 +228,20 @@ ul {
 }
 
 .orders {
+  background-color: var(--menu-nav-menu-footer-bckgr);
+  display: flex;
+  justify-content: center;
+}
+.orders-container {
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
     url("../images/background_order.jpg");
-  min-width: 1600px;
+  max-width: 1600px;
   height: 600px;
-  /* margin-left: auto;
-  margin-right: auto;  */
-   background-size: cover;
-  
-}
-.container-orders  {
-  /* min-width: 1600px; */
-  align-items: center;
-  flex-direction: column;
-  background: no-repeat;
- 
+  width: 100%;
 }
 .feature-menu {
   padding-top: 94px;
@@ -641,7 +649,7 @@ ul {
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
-  color:  var(--text-color);
+  color: var(--text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -716,7 +724,7 @@ ul {
   align-items: center;
   justify-content: center;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -733,10 +741,9 @@ ul {
   padding-bottom: 12px;
   width: 528px;
   max-height: 581px;
-  background: var( --studio-bottom-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
-  0px 1px 1px rgba(0, 0, 0, 0.14),
-  0px 2px 1px rgba(0, 0, 0, 0.2);
+  background: var(--studio-bottom-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -752,9 +759,7 @@ ul {
   cursor: pointer;
   margin-bottom: 2px;
 }
-.close-btn:hover
- {
-  
+.close-btn:hover {
   color: var(--link-color-hover);
 }
 
@@ -776,7 +781,7 @@ ul {
 .modal-form-textspace-title {
   display: flex;
   position: relative;
-  margin-bottom:4px;
+  margin-bottom: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
@@ -790,7 +795,6 @@ ul {
   letter-spacing: 0.01em;
   color: var(--text-color);
   margin-top: 10px;
-  
 }
 
 .modal-icon {
@@ -809,20 +813,18 @@ ul {
   font-size: 12px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   outline: none;
+  padding-left: 40px;
 }
 .modal-icon:focus,
-.modal-icon:hover
-{
- fill: var(--link-color-hover);
- 
+.modal-icon:hover {
+  fill: var(--link-color-hover);
 }
 .modal-form-textspace-title:focus,
 .modal-form-textspace-title:hover,
 .modal-form-textarea:focus,
-.modal-form-textarea:hover
-{
- fill:  var(--link-color-hover);
- border-color: var(--link-color-hover);
+.modal-form-textarea:hover {
+  fill: var(--link-color-hover);
+  border-color: var(--link-color-hover);
 }
 .modal-form-textarea {
   border-radius: 4px;
@@ -840,65 +842,65 @@ textarea {
 }
 
 .modal-form-policy-text {
-margin-left: 20px;
-margin-right: 20px;
-width: 397px;
-height: 24px;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.714;
-color: var(--text-color);
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 397px;
+  height: 24px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  color: var(--text-color);
 }
 
-.modal-form-policy{
- justify-content: center;
+.modal-form-policy {
+  justify-content: center;
 }
 
-.modal-form-policy-text::before{
-display: inline-block;
-content: "";
-width: 16px;
-height: 15px;
-border: 1px solid #212121;
-border-radius: 2px;
-cursor: pointer;
-margin-right: 8px;
-margin-top: 25px;
+.modal-form-policy-text::before {
+  display: inline-block;
+  content: "";
+  width: 16px;
+  height: 15px;
+  border: 1px solid #212121;
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 8px;
+  margin-top: 25px;
 }
-.modal-form-policy:checked + .modal-form-policy-text::before{
-background-color: var(--link-color-hover);
-border: none;
-background-image: url("../images/Vector2.svg");
+/* .modal-form-policy:checked + .modal-form-policy-text::before {
+  background-color: var(--link-color-hover);
+  border: none;
+  background-image: url("../images/Vector2.svg");
 
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
+
+
+
+
+.checked-icon {
+  width: 11px;
+  height: 8px;
+  position: relative;
+  transform:;
 }
 
-.visually-hidden{
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
+
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  
 }
-.modal_form-regulations-link{
-margin-left: 2px;
-margin-right: 2px;
+.modal_form-regulations-link {
+  margin-left: 2px;
+  margin-right: 2px;
 }
 .modal_form-regulations-link:focus,
-.modal_form-regulations-link:hover{
-  color: var(--regulations-link-color)
+.modal_form-regulations-link:hover {
+  color: var(--regulations-link-color);
 }
 .modal-submit-btn {
   /* position:relative; */
@@ -925,6 +927,5 @@ margin-right: 2px;
 
 .modal-submit-btn:hover,
 .modal-submit-btn:focus {
-  
-  background-color: #226FF3;
+  background-color: #226ff3;
 }
