--- a/css/styles.css
+++ b/css/styles.css
@@ -221,8 +221,9 @@ ul {
       rgba(47, 48, 58, 0.4)
     ),
     url("../images/background_order.jpg");
-  min-width: 1600px;
-  height: 600px;
+    padding-bottom:200px ;
+  /* min-width: 1600px;
+  height: 600px; */
   /* margin-left: auto;
   margin-right: auto;  */
    background-size: cover;
