--- a/css/styles.css
+++ b/css/styles.css
@@ -892,8 +892,13 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
 .policy-checkbox {
   display: inline-block;
   justify-content: center;
+  position: absolute;
+  
+  
 }
-
+.checkbox {
+  margin-left: -20px;
+}
 /* .visually-hidden{
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
