--- a/css/styles.css
+++ b/css/styles.css
@@ -842,8 +842,6 @@ textarea {
 }
 
 .modal-form-policy-text {
-margin-left: -20px;
-margin-right: 20px;
 width: 397px;
 height: 24px;
 font-family: 'Roboto';
@@ -863,11 +861,7 @@ display: inline-block;
 content: "";
 width: 16px;
 height: 15px;
-border: 1px solid #212121;
-border-radius: 2px;
 cursor: pointer;
-margin-right: 8px;
-margin-top: 25px;
 }
 .modal-form-policy:checked + .modal-form-policy-text::before{
 background-color: var(--link-color-hover);
@@ -876,43 +870,27 @@ border: none;
 transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .policy-checkbox::before {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='15' fill='none'%3E%3Cpath fill='%23212121' d='M14.222 1.667v11.666H1.778V1.667h12.444Zm0-1.667H1.778C.8 0 0 .75 0 1.667v11.666C0 14.25.8 15 1.778 15h12.444C15.2 15 16 14.25 16 13.333V1.667C16 .75 15.2 0 14.222 0Z'/%3E%3C/svg%3E");
   display:inline-block;
   content: "";
   width: 16px;
   height: 15px;
-  justify-content: center; 
-  
+  margin-right: 5px;
 }
 .checkbox:checked + .policy::before {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='15' fill='none'%3E%3Crect width='16' height='15' fill='%232196F3' rx='2'/%3E%3Cpath fill='%23fff' stroke='%23fff' stroke-width='.2' d='m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z'/%3E%3C/svg%3E");
-  background-position: center;
-  border: none;
+  background-position: center; 
+  border: none; 
 } 
-.policy-checkbox {
-  display: inline-block;
-  justify-content: center;
-  position: absolute;
-  
-  
-}
+
+
 .checkbox {
-  margin-left: -20px;
-  
-  
-  
+  margin-left: -23px; 
+  outline: none;
 }
-/* .visually-hidden{
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-} */
+
 .is-hidden {
   opacity: 0;
   visibility: hidden;
