--- a/css/styles.css
+++ b/css/styles.css
@@ -867,8 +867,8 @@ cursor: pointer;
 background-color: var(--link-color-hover);
 border: none;
 /* background-image: url("../images/icons.svg#icon-checkbox"); */
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+/* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .policy-checkbox::before {
@@ -878,6 +878,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
   width: 16px;
   height: 15px;
   margin-right: 5px;
+  
 }
 .checkbox:checked + .policy::before {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='15' fill='none'%3E%3Crect width='16' height='15' fill='%232196F3' rx='2'/%3E%3Cpath fill='%23fff' stroke='%23fff' stroke-width='.2' d='m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z'/%3E%3C/svg%3E");
@@ -885,10 +886,10 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
   border: none; 
 } 
 
-
 .checkbox {
-  margin-left: -23px; 
-  outline: none;
+  margin-left: -25px; 
+  width: 16px;
+  height: 15px;
 }
 
 .is-hidden {
